@@ -912,12 +912,12 @@ module Wt
 
     def inspect
       str = super
-      str.sub(/>$/, " id=%s>" % [id])
+      str.sub(/>$/, " id=%sm items=Array (%d element(s))>" % [id, items.length])
     end
     
     def pretty_print(pp)
       str = to_s
-      pp.text str.sub(/>$/, "\n id=%s>" % [id])
+      pp.text str.sub(/>$/, "\n id=%s\n items=Array (%d element(s))>" % [id, items.length])
     end
   end
 
