@@ -13,7 +13,9 @@ was causing a seg fault
 'status=()' method to the event displayer
 * Added a text value to the WLineEdit inspect() and pp() methods
 * More tweaks to the widgetsgallery demo. Disable Ruby garbage collection for
-now until problems in coordinating GC with Wt are fixed.
+now until problems in coordinating GC with Wt are fixed
+* Some improvements to the smokeruby_mark() function and garbage collection
+logging
 
 2009-01-23 Richard Dale <richard.j.dale@gmail.com>
 * Added the widgetgallery example, and amended the charts, dragdrop and 
